--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timetoplan2.0",
+  "name": "viziplan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +17,8 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "react-redux": "^8.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
