--- a/myapp/package.json
+++ b/myapp/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.6",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -45,6 +46,9 @@
       "last 1 safari version"
     ]
   },
+  "overrides": {
+    "autoprefixer": "10.4.6"
+ },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "keywords": [],
