--- a/myapp/package.json
+++ b/myapp/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "use-force-update": "^1.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,7 +49,7 @@
   },
   "overrides": {
     "autoprefixer": "10.4.6"
- },
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "keywords": [],
