--- a/myapp/package.json
+++ b/myapp/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
     "use-force-update": "^1.0.8",
     "web-vitals": "^2.1.4"
   },
