--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "viziplan",
+  "name": "myapp",
+  "homepage": "https://atiftariq786.github.io/ViziPlan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "autoprefixer": "10.4.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -26,6 +28,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
