--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myapp",
-  "homepage": "https://atiftariq786.github.io/ViziPlan",
+  "homepage": "https://atiftariq786.github.io/ViziPlan/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
