--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "viziplan",
   "homepage": "https://vizi-plan-fe.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
